load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tictactoe_lib",
    srcs = ["main.go"],
    importpath = "github.com/Zaba505/adhoc/games/tictactoe",
    visibility = ["//visibility:private"],
    deps = ["//games/tictactoe/cmd"],
)

go_binary(
    name = "tictactoe",
    embed = [":tictactoe_lib"],
    visibility = ["//visibility:public"],
)
