load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "model_proto",
    srcs = ["graph.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "model_go_proto",
    importpath = "github.com/Zaba505/adhoc/graphs/model",
    proto = ":model_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "model",
    embed = [":model_go_proto"],
    importpath = "github.com/Zaba505/adhoc/graphs/model",
    visibility = ["//visibility:public"],
)
