# Copyright (c) 2023 Zaba505
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "maze_lib",
    srcs = [
        "lib.rs",
    ],
    deps = [
        
    ],
)
