load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "eventrecorder_lib",
    srcs = ["main.go"],
    importpath = "github.com/Zaba505/adhoc/eventsourcing/services/eventrecorder",
    visibility = ["//visibility:private"],
    deps = ["//eventsourcing/services/eventrecorder/cmd"],
)

go_binary(
    name = "eventrecorder",
    embed = [":eventrecorder_lib"],
    visibility = ["//visibility:public"],
)
