load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "play.go",
        "play_cvc.go",
        "play_pvc.go",
        "play_pvp.go",
        "tictactoe.go",
    ],
    importpath = "github.com/Zaba505/adhoc/games/tictactoe/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//games/tictactoe/tictactoe",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
