load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc",
    srcs = ["service.go"],
    importpath = "github.com/Zaba505/adhoc/games/tictactoe/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//games/tictactoe/tictactoepb",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)
