load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tictactoepb",
    embed = [":tictactoepb_go_proto"],
    importpath = "github.com/Zaba505/adhoc/games/tictactoe/tictactoepb",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "tictactoepb_proto",
    srcs = ["tictactoe.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "tictactoepb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/Zaba505/adhoc/games/tictactoe/tictactoepb",
    proto = ":tictactoepb_proto",
    visibility = ["//visibility:public"],
)
