load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "root.go",
    ],
    importpath = "github.com/Zaba505/adhoc/eventsourcing/services/eventrecorder/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//eventsourcing/services/eventrecorder/datastore",
        "//eventsourcing/services/eventrecorder/grpc",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
