load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "datastore",
    srcs = ["datastore.go"],
    importpath = "github.com/Zaba505/adhoc/eventsourcing/services/eventrecorder/datastore",
    visibility = ["//visibility:public"],
    deps = [
        "//eventsourcing/services/eventrecorder/proto",
        "@org_uber_go_zap//:zap",
    ],
)
